// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verifying ShowItem component ShowItem renders correctly 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-card-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root makeStyles-media-4"
    />
    <div
      className="MuiCardContent-root"
    >
      <p
        className="MuiTypography-root makeStyles-content-5 MuiTypography-body1"
      >
        <strong>
          Genre:
           
        </strong>
        Drama,Action
      </p>
    </div>
  </div>
</div>
`;

exports[`verifying ShowItem component renders correctly when few props are not passed 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-card-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <a
      aria-current={null}
      href="/show/1"
      onClick={[Function]}
    >
      <div
        className="MuiCardMedia-root makeStyles-media-4"
      />
    </a>
    <div
      className="MuiCardContent-root"
    >
      <p
        className="MuiTypography-root makeStyles-content-5 MuiTypography-body1"
      >
        <strong>
          Genre:
           
        </strong>
        NA
      </p>
    </div>
  </div>
</div>
`;

exports[`verifying ShowItem component renders correctly when few props are not passed 2`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-card-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <a
      aria-current={null}
      href="/show/1"
      onClick={[Function]}
    >
      <div
        className="MuiCardMedia-root makeStyles-media-4"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.publicdomainpictures.net/pictures/280000/velka/not-found-image-15383864787lu.jpg\\")",
          }
        }
      />
    </a>
    <div
      className="MuiCardContent-root"
    >
      <p
        className="MuiTypography-root makeStyles-content-5 MuiTypography-body1"
      >
        <strong>
          Genre:
           
        </strong>
        NA
      </p>
    </div>
  </div>
</div>
`;

exports[`verifying ShowItem component renders correctly when few props are not passed. 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-card-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <a
      aria-current={null}
      href="/show/1/episodes/undefined/undefined"
      onClick={[Function]}
    >
      <div
        className="MuiCardMedia-root makeStyles-media-4"
        style={
          Object {
            "backgroundImage": "url(\\"https://www.publicdomainpictures.net/pictures/280000/velka/not-found-image-15383864787lu.jpg\\")",
          }
        }
      />
    </a>
    <div
      className="MuiCardContent-root"
    >
      <p
        className="MuiTypography-root makeStyles-content-5 MuiTypography-body1"
      >
        <strong>
          Genre:
           
        </strong>
        NA
      </p>
    </div>
  </div>
</div>
`;

exports[`verifying ShowItem component renders correctly when few props are not passed. 2`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-card-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root makeStyles-media-4"
      style={
        Object {
          "backgroundImage": "url(\\"https://www.publicdomainpictures.net/pictures/280000/velka/not-found-image-15383864787lu.jpg\\")",
        }
      }
    />
    <div
      className="MuiCardContent-root"
    >
      <p
        className="MuiTypography-root makeStyles-content-5 MuiTypography-body1"
      >
        <strong>
          Genre:
           
        </strong>
        Drama,Action
      </p>
    </div>
  </div>
</div>
`;
